--- a/2.Project_Your_Personal_Website/css/styles.css
+++ b/2.Project_Your_Personal_Website/css/styles.css
@@ -9,12 +9,12 @@ body {
 
 .this-is-div-2 {
     height: 200px;
-    background-color: #black;
+    background-color: black;
 }
 
 .this-is-div-3 {
     height: 200px;
-    background-color: #black;
+    background-color: black;
     /*position: absolute;*/
 }
 
