--- a/2.Project_Your_Personal_Website/css/styles.css
+++ b/2.Project_Your_Personal_Website/css/styles.css
@@ -1,19 +1,23 @@
 body {
     background: black;
+    color: springgreen;
+    text-align: center;
+    font-family: 'Courier New', monospace;
+
 }
 
 .this-is-div-1 {
-    height: 200px;
+    height: 600px;
     background-color: black;
 }
 
 .this-is-div-2 {
-    height: 200px;
+    height: 600px;
     background-color: black;
 }
 
 .this-is-div-3 {
-    height: 200px;
+    height: 600px;
     background-color: black;
     /*position: absolute;*/
 }
@@ -28,19 +32,4 @@ h1 {
 
 body {
     margin: 50px;
-}
-
-span {
-    background-color: red;
-    /*width: 1000000px;*/
-    /*you can't change the width , you can only add things it contained*/
-}
-
-.this-is-p-1 {
-    background-color: cadetblue;
-    width: 200px;
-    /*display: inline-block;*/
-    /*display: none;*/
-    visibility: hidden;
-
 }
