--- a/2.Project_Your_Personal_Website/css/styles.css
+++ b/2.Project_Your_Personal_Website/css/styles.css
@@ -1,30 +1,51 @@
+hr {
+    border-top: 1px dashed springgreen;
+    border-bottom: 1px dashed springgreen;
+    margin: 50px auto;
+}
+
 body {
     background: black;
     color: springgreen;
     text-align: center;
     font-family: 'Courier New', monospace;
     padding: 0;
-
 }
 
-.this-is-div-1 {
+.title-section {
     height: 850px;
     background-color: black;
     position: relative;
 }
 
-.this-is-div-2 {
-    height: 850px;
+.skill-section {
+    height: 1000px;
     background-color: black;
     position: relative;
     top: 50px;
     text-align: left;
 }
 
-.this-is-div-3 {
-    height: 850px;
+.contact-me-section {
+    height: 300px;
     background-color: black;
     /*position: absolute;*/
+}
+
+.footer-section {
+    height: 50px;
+}
+
+.footer-more-info {
+    color: springgreen;
+}
+
+.terms-and-conditions {
+    color: springgreen;
+}
+
+.copyright {
+    color: springgreen;
 }
 
 h1 {
@@ -43,7 +64,7 @@ h1 {
 }
 
 body {
-    margin: 50px;
+    margin: 0;
 }
 
 .guitar {
@@ -64,8 +85,59 @@ body {
 
 .music_img {
     float: left;
+    margin-right: 20px;
 }
 
 .painting_img {
     float: right;
 }
+
+
+.computer-skill {
+    margin: 120px 500px 120px 500px;
+}
+
+.music-skill {
+    margin: 120px 500px 120px 500px;
+}
+
+.art-skill {
+    margin: 120px 500px 120px 500px;
+}
+
+
+.contact-me-info {
+    width: 35%;
+    margin: 50px auto 50px;
+}
+
+.footer-section {
+    background: black;
+    color: springgreen;
+    text-align: center;
+    font-family: 'Courier New', monospace;
+    padding: 0;
+}
+
+
+.btn {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0px;
+    -webkit-box-shadow: 0px 1px 3px #00ff80;
+    -moz-box-shadow: 0px 1px 3px #00ff80;
+    box-shadow: 0px 1px 3px #00ff80;
+    font-family: Courier New;
+    color: #00FF7FFF;
+    font-size: 20px;
+    background: #000000;
+    padding: 10px 20px 10px 20px;
+    border: solid #00ff80 2px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #ffffff;
+    text-decoration: none;
+}
+
